# python-project-lvl3

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg  www-simplehtmlguide-com-examples-images2-html.html
.github/workflows/: linter.yml
page_loader/: __init__.py  file_utils.py  helper.py  loader.py  logging_utils.py  network_utils.py
page_loader/scripts/: page_loader.py
page_loader/tests/: test_page_loader.py
page_loader/tests/fixtures/: cources.html  cources_expected.html  courses.html  courses_resources_expected.txt  page.html  ru-hexlet-io-assets-application.css  ru-hexlet-io-packs-js-runtime.js  simple_expected.html  simple_resources_expected.txt
