[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page loader"
authors = ["dirty_hippy <piaiws@gmail.com>"]
repository = "https://github.com/DirtyHippy/python-project-lvl3.git"
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
mypy = "^0.910"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
