[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page loader"
authors = ["dirty_hippy <piaiws@gmail.com>"]
repository = "https://github.com/DirtyHippy/python-project-lvl3.git"
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
mypy = "^0.910"
autopep8 = "^1.6.0"
pytest-cov = "^3.0.0"
types-requests = "^2.25.11"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
